--- a/MyWeb-HTML-CSS/index.html
+++ b/MyWeb-HTML-CSS/index.html
@@ -24,7 +24,7 @@
             <a href="#Datavh" class="nav_menu nav_menu2"><img src="./img/icons/cross.svg" class="nav_icon"></a>
 
             <ul class="entidades">
-                <a href="#inicio" class="entidad">Inicio</a>
+                <a href="#" class="entidad">Inicio</a>
                 <a href="#nosotros" class="entidad">Nosotros</a>
                 <a href="#servicios" class="entidad">Servicios</a>
                 <a href="#contacto" class="entidad">Contacto</a>
@@ -33,7 +33,7 @@
             <ul class="dropdown-fondo">
                 <ul class="dropdown" id="menu">
                     <li class="dropdown-list">
-                        <a href="#inicio" class="dropdown-link">Inicio</a>
+                        <a href="#" class="dropdown-link">Inicio</a>
                     </li>
                     <li class="dropdown-list">
                         <a href="#nosotros" class="dropdown-link">Nosotros</a>                    
@@ -50,7 +50,7 @@
     </nav>
 
     <header>
-        <section class="hero" id="inicio">
+        <section class="hero" id="#">
 
             <h2>Bienvenido a Datavh</h2>
             <p>Website created by 9tiuu | MyWeb-HTML-CSS</p>
@@ -60,64 +60,68 @@
     </header>
 
     <main>
-        <section class="nosotros" id="nosotros">
-            <h2 class="titulo">Sobre nosotros</h2>
+        <section class="nosotros">
+            <h3 class="sectionid" id="nosotros">
+                <h2 class="titulo">Sobre nosotros</h2>
 
-            <div class="sobre-nosotros">
-                <img src="./img/900x600-01.png" alt="">
-                <div class="sobre-nosotros-textos">
+                <div class="sobre-nosotros">
+                    <img src="./img/900x600-01.png" alt="">
+                    <div class="sobre-nosotros-textos">
 
-                    <h3>¿Qué hacemos?</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, 
-                        ab corrupti. Cupiditate officia, veniam, aliquid quasi similique ipsa 
-                        inventore earum incidunt doloribus reprehenderit aperiam accusantium recusandae 
-                        saepe quas, sequi rem?
-                    </p>
+                        <h3>¿Qué hacemos?</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, 
+                            ab corrupti. Cupiditate officia, veniam, aliquid quasi similique ipsa 
+                            inventore earum incidunt doloribus reprehenderit aperiam accusantium recusandae 
+                            saepe quas, sequi rem?
+                        </p>
 
-                    <h3>¿Cuál es nuestro objetivo?</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, 
-                        ab corrupti. Cupiditate officia, veniam, aliquid quasi similique ipsa 
-                        inventore earum incidunt doloribus reprehenderit aperiam accusantium recusandae 
-                        saepe quas, sequi rem?
-                    </p>
+                        <h3>¿Cuál es nuestro objetivo?</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, 
+                            ab corrupti. Cupiditate officia, veniam, aliquid quasi similique ipsa 
+                            inventore earum incidunt doloribus reprehenderit aperiam accusantium recusandae 
+                            saepe quas, sequi rem?
+                        </p>
 
-                    <a href="#">Ver más</a>
+                        <a href="#">Ver más</a>
 
+                    </div>
                 </div>
-            </div>
+            </h3>
         </section>
 
-        <section class="servicios" id="servicios">
-            <h2 class="titulo">Nuestros servicios</h2>
-            <div class="servicios-x">
-                <div class="tarjetas">
-                    <div class="servicio">
-                        <img src="./img/icons/computer.png" alt="">
-                        <h3>Servicio técnico</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, 
-                            adipisicing elit. Recusandae, deleniti?
-                        </p>
+        <section class="servicios">
+            <h3 class="sectionid" id="servicios">
+                <h2 class="titulo">Nuestros servicios</h2>
+                <div class="servicios-x">
+                    <div class="tarjetas">
+                        <div class="servicio">
+                            <img src="./img/icons/computer.png" alt="">
+                            <h3>Servicio técnico</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, 
+                                adipisicing elit. Recusandae, deleniti?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tarjetas">
+                        <div class="servicio">
+                            <img src="./img/icons/website.png" alt="">
+                            <h3>Desarrollo web</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, 
+                                adipisicing elit. Recusandae, deleniti?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tarjetas">
+                        <div class="servicio">
+                            <img src="./img/icons/cloud.png" alt="">
+                            <h3>Administración en la nube</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, 
+                                adipisicing elit. Recusandae, deleniti?
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="tarjetas">
-                    <div class="servicio">
-                        <img src="./img/icons/website.png" alt="">
-                        <h3>Desarrollo web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, 
-                            adipisicing elit. Recusandae, deleniti?
-                        </p>
-                    </div>
-                </div>
-                <div class="tarjetas">
-                    <div class="servicio">
-                        <img src="./img/icons/cloud.png" alt="">
-                        <h3>Administración en la nube</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, 
-                            adipisicing elit. Recusandae, deleniti?
-                        </p>
-                    </div>
-                </div>
-            </div>
+            </h3>
         </section>
 
         <section class="servicios-02">
@@ -145,24 +149,26 @@
             </div>
         </section> 
 
-        <section class="contacto" id="contacto">
-            <h2 class="titulo">Contactanos</h2>
-            <div class="form">
-                <div class="form-m">
+        <section class="contacto">
+            <h3 class="sectionid" id="contacto">
+                <h2 class="titulo">Contactanos</h2>
+                <div class="form">
+                    <div class="form-m">
 
-                    <form action="" method="post">                       
-                        <div class="form-cuerpo">
-                            <h2 class="form-titulo">Formulario de contacto</h2>
-                            <input type="text" class="form-input" name="nombre" placeholder="Nombre">
-                            <input type="text" class="form-input" name="apellido" placeholder="Apellido">
-                            <input type="email" class="form-input" name="correo" placeholder="Correo">
-                            <textarea class="form-input form-mensaje" name="mensaje" placeholder="Mensaje"></textarea>
-                            <input type="submit" class="form-boton" value="Enviar correo">
-                        </div>
-                    </form>
+                        <form action="" method="post">                       
+                            <div class="form-cuerpo">
+                                <h2 class="form-titulo">Formulario de contacto</h2>
+                                <input type="text" class="form-input" name="nombre" placeholder="Nombre">
+                                <input type="text" class="form-input" name="apellido" placeholder="Apellido">
+                                <input type="email" class="form-input" name="correo" placeholder="Correo">
+                                <textarea class="form-input form-mensaje" name="mensaje" placeholder="Mensaje"></textarea>
+                                <input type="submit" class="form-boton" value="Enviar correo">
+                            </div>
+                        </form>
 
+                    </div>
                 </div>
-            </div>
+            </h3>
         </section>
     </main>
 
@@ -173,7 +179,7 @@
                     <div class="logo-Datavh">
                         <img src="./img/icon-Datavh.png" alt="">
                     </div>
-                    <a href="#inicio">Inicio</a>
+                    <a href="#">Inicio</a>
                     <a href="#nosotros">Nosotros</a>
                     <a href="#servicios">Servicios</a>
                     <a href="#contacto">Contacto</a>
